<resources>
    <string name="app_name">Menguita_Calculator</string>
    <string name="Name">Menguita\'s Calculator</string>
    <string name="Operand1">Operand 1:</string>
    <string name="BlankNum">0.0</string>
    <string name="Operand2">Operand 2:</string>
    <string name="Addition">+</string>
    <string name="Subtraction">-</string>
    <string name="Multiplication">\u00D7</string>
    <string name="Division">\u00F7</string>
    <string name="Remainder">/</string>
    <string name="Equal">=</string>
    <string name="TheResultIs">The Result Is: </string>
</resources>