<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        app:layout_constraintBottom_toTopOf="@+id/Operand1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Operand1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Operand1"
        app:layout_constraintBottom_toTopOf="@+id/Number1"
        app:layout_constraintEnd_toEndOf="@+id/Name"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/Name"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <EditText
        android:id="@+id/Number1"
        android:layout_width="243dp"
        android:layout_height="54dp"
        android:autofillHints="First Number"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/BlankNum"
        app:layout_constraintBottom_toTopOf="@+id/Operand2"
        app:layout_constraintEnd_toEndOf="@+id/Operand1"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/Operand1"
        app:layout_constraintTop_toBottomOf="@+id/Operand1"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/Operand2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Operand2"
        app:layout_constraintBottom_toTopOf="@+id/Number2"
        app:layout_constraintEnd_toEndOf="@+id/Number1"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/Number1"
        app:layout_constraintTop_toBottomOf="@+id/Number1" />

    <EditText
        android:id="@+id/Number2"
        android:layout_width="243dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/BlankNum"
        app:layout_constraintBottom_toTopOf="@+id/Addition"
        app:layout_constraintEnd_toEndOf="@+id/Operand2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/Operand2"
        app:layout_constraintTop_toBottomOf="@+id/Operand2"
        android:autofillHints="Second Number"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/Addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Addition"
        android:onClick="solution"
        app:layout_constraintBottom_toTopOf="@+id/Multiplication"
        app:layout_constraintEnd_toStartOf="@+id/Subtraction"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/Number2"
        app:layout_constraintTop_toBottomOf="@+id/Number2" />

    <Button
        android:id="@+id/Subtraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Subtraction"
        android:onClick="solution"
        app:layout_constraintBottom_toBottomOf="@+id/Addition"
        app:layout_constraintEnd_toEndOf="@+id/Number2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Addition"
        app:layout_constraintTop_toTopOf="@+id/Addition" />

    <Button
        android:id="@+id/Multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Multiplication"
        android:onClick="solution"
        app:layout_constraintBottom_toTopOf="@+id/Remainder"
        app:layout_constraintEnd_toEndOf="@+id/Addition"
        app:layout_constraintStart_toStartOf="@+id/Addition"
        app:layout_constraintTop_toBottomOf="@+id/Addition" />

    <Button
        android:id="@+id/Division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Division"
        android:onClick="solution"
        app:layout_constraintBottom_toBottomOf="@+id/Multiplication"
        app:layout_constraintEnd_toEndOf="@+id/Subtraction"
        app:layout_constraintStart_toStartOf="@+id/Subtraction"
        app:layout_constraintTop_toTopOf="@+id/Multiplication" />

    <Button
        android:id="@+id/Remainder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Remainder"
        android:onClick="solution"
        app:layout_constraintBottom_toTopOf="@+id/TheResultIs"
        app:layout_constraintEnd_toEndOf="@+id/Multiplication"
        app:layout_constraintStart_toStartOf="@+id/Multiplication"
        app:layout_constraintTop_toBottomOf="@+id/Multiplication" />

    <Button
        android:id="@+id/Equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Equal"
        android:onClick="solution"
        app:layout_constraintBottom_toBottomOf="@+id/Remainder"
        app:layout_constraintEnd_toEndOf="@+id/Division"
        app:layout_constraintStart_toStartOf="@+id/Division"
        app:layout_constraintTop_toTopOf="@+id/Remainder" />

    <TextView
        android:id="@+id/TheResultIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TheResultIs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Result"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Remainder" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BlankNum"
        app:layout_constraintBottom_toBottomOf="@+id/TheResultIs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TheResultIs"
        app:layout_constraintTop_toTopOf="@+id/TheResultIs" />

</androidx.constraintlayout.widget.ConstraintLayout>